tests/ui/cfg/cmdline-false.stderr
error[E0425]: cannot find function `foo` in this scope
  --> $DIR/cmdline-false.rs:8:5
   |
LL |     foo();
   |     ^^^ not found in this scope
   |
note: found an item that was configured out
  --> $DIR/cmdline-false.rs:5:4
   |
LL | #[cfg(false)]
   |       ----- the item is gated here
LL | fn foo() {}
   |    ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
